src/style.scss
@use 'sass:math';

$desktop-breakpoint: 980px;

:root {
    --color-primary-green-400: hsl(172, 67%, 45%);
    --color-primary-green-200: hsl(172, 67%, 75%);

    --color-neutral-green-900: hsl(183, 100%, 15%);
    --color-neutral-grey-500: hsl(186, 14%, 43%);
    --color-neutral-grey-400: hsl(184, 14%, 56%);
    --color-neutral-grey-200: hsl(185, 41%, 84%);
    --color-neutral-grey-50: hsl(189, 47%, 97%);

    --color-neutral-white: hsl(0, 100%, 100%);
}

@function rem($value) {
    @return math.div($value, 16) * 1rem;
}

html {
    font-family: 'Space Mono', monospace;
    font-weight: 700;
    // by default font-size: 16px;
}

body {
    font-size: rem(24);
    padding-top: rem(40);
    background-color: var(--color-neutral-grey-200);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

:focus-visible {
    outline: 2px solid var(--color-primary-green-400);
    outline-offset: 2px;
}

input {
    border: none;
    background-color: transparent;
    appearance: none;
    outline: none;
    min-width: 0;
    padding: 0;
    color: var(--color-neutral-green-900);

    &:-internal-autofill-selected {
        color: var(--color-neutral-green-900);
        background-color: transparent !important;
    }

    &:-webkit-autofill,
    &:-webkit-autofill:hover,
    &:-webkit-autofill:focus,
    &:-webkit-autofill:active {
        -webkit-background-clip: text;
        -webkit-text-fill-color: var(--color-neutral-green-900);
        transition: background-color 5000s ease-in-out 0s;
        box-shadow: inset 0 0 20px 20px transparent;
    }

    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
        /* display: none; <- Crashes Chrome on hover */
        -webkit-appearance: none;
        margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
    }

    &[type='number'] {
        -moz-appearance: textfield; /* Firefox */
    }
}

button {
    border: none;
    background-color: transparent;
    appearance: none;
    outline: none;

    &:active {
        transform: scale(0.98);
    }
}

.container {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;

    @media (min-width: $desktop-breakpoint) {
        padding-top: rem(112);
        justify-content: flex-start;
    }
}

.app-title {
    font-size: rem(24);
    line-height: rem(36);
    letter-spacing: 43%;
    text-transform: uppercase;
    color: var(--color-neutral-green-900);
    text-align: center;
    margin-bottom: rem(40);
    width: rem(110);
    margin: 0 auto rem(32);

    @media (min-width: $desktop-breakpoint) {
        margin: 0 auto rem(79);
    }
}

.card {
    border-radius: rem(24) rem(24) 0 0;
    padding: rem(24) rem(24) rem(30);
    flex-grow: 1;
    background-color: var(--color-neutral-white);
    display: flex;
    flex-direction: column;
    gap: rem(32);
    max-width: rem(600);
    margin: 0 auto;
    width: 100%;
    min-width: 320px;

    @media (min-width: $desktop-breakpoint) {
        max-width: rem(920);
        flex-grow: 0;
        flex-direction: row;
        border-radius: rem(32);
        padding: rem(32);
        gap: rem(30);
    }
}

@media (min-width: $desktop-breakpoint) {
    .form,
    .total {
        flex-grow: 1;
        flex-shrink: 1;
        flex-basis: rem(413);
    }
}

.form {
    padding: rem(8) rem(8) 0;
    min-height: rem(444);
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    @media (min-width: $desktop-breakpoint) {
        padding: rem(14) rem(16) rem(16);
        min-height: rem(417);
    }
}

.input {
    display: flex;
    flex-direction: column;
    gap: rem(6);

    input {
        outline: none;
    }

    &__label {
        font-size: rem(16);
        color: var(--color-neutral-grey-500);
        display: flex;
        justify-content: space-between;
    }

    &__error {
        color: red;
        opacity: 0;
        transition: opacity 0.233s ease-out;
    }

    &__icon {
        color: var(--color-neutral-grey-400);
    }

    &__field {
        display: flex;
        align-items: center;
        gap: rem(10);
        background-color: var(--color-neutral-grey-50);
        border-radius: rem(4);
        padding: 0 rem(16);
        transition: box-shadow 0.233s ease-out;

        &:has(input:focus-visible) {
            box-shadow: 0 0 0 2px inset var(--color-primary-green-400);
        }
        &:has(input:user-invalid) {
            box-shadow: 0 0 0 2px inset red;
        }
    }

    &__value {
        text-align: right;
        min-height: rem(48);
        font-size: rem(24);
        flex-grow: 1;

        &::placeholder {
            color: var(--color-neutral-grey-400);
        }
    }

    &:has(input:user-invalid) {
        .input__error {
            opacity: 1;
        }
    }
}

.input-group {
    display: flex;
    flex-direction: column;

    &__label {
        font-size: rem(16);
        color: var(--color-neutral-grey-500);
        margin-bottom: rem(16);
    }

    &__buttons {
        display: flex;
        flex-wrap: wrap;
        gap: rem(16);

        @media (min-width: $desktop-breakpoint) {
            gap: rem(14) rem(16);
        }
    }

    &__button {
        font-size: rem(24);
        min-width: rem(117);
        flex-grow: 1;
        flex-shrink: 0;
        flex-basis: 0;
        display: flex;
        justify-content: center;
        align-items: center;
        color: var(--color-neutral-white);
        background-color: var(--color-neutral-green-900);
        border-radius: rem(4);
        min-height: rem(48);
        padding: 0 rem(16);
        cursor: pointer;

        @media (hover: hover) {
            &:hover {
                background-color: var(--color-primary-green-200);
                color: var(--color-neutral-green-900);
            }
        }

        &:has(input:checked) {
            background-color: var(--color-primary-green-400);
            color: var(--color-neutral-green-900);
        }

        @media (min-width: $desktop-breakpoint) {
            min-width: rem(116);
        }
    }

    &__input {
        position: relative;
        font-size: rem(24);
        min-width: rem(117);
        flex-grow: 1;
        flex-shrink: 0;
        flex-basis: 0;
        display: flex;
        align-items: center;
        box-sizing: border-box;
        background-color: var(--color-neutral-grey-50);
        border-radius: rem(4);
        min-height: rem(48);
        cursor: pointer;
        padding: 0 rem(16) 0 0;

        &:has(input:focus-visible) {
            outline: 2px solid var(--color-primary-green-400);
            outline-offset: 0px;
        }

        input {
            outline: none;
            text-align: right;
            width: 100%;
        }

        input::placeholder {
            color: var(--color-neutral-green-900);
        }
    }

    // &__hidden {
    //     display: none;
    // }
}

.total {
    display: flex;
    flex-direction: column;
    padding: rem(40) rem(24) rem(24);
    background-color: var(--color-neutral-green-900);
    border-radius: rem(16);

    &__item {
        & + & {
            margin-top: rem(22);
        }
    }

    &__button {
        margin-top: rem(34);

        @media (min-width: $desktop-breakpoint) {
            margin-top: auto;
        }
    }

    @media (min-width: $desktop-breakpoint) {
        padding: rem(40);
    }
}

.amount-item {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: 1fr auto;
    color: var(--color-neutral-white);
    align-items: center;

    &__label {
        font-size: rem(16);
        line-height: rem(26);

        @media (min-width: $desktop-breakpoint) {
            align-self: flex-end;
        }
    }

    &__subtitle {
        font-size: rem(13);
        line-height: rem(18);
        color: var(--color-neutral-grey-400);

        @media (min-width: $desktop-breakpoint) {
            align-self: flex-start;
        }
    }

    &__value {
        font-size: rem(30);
        grid-area: 1 / 2 / -1 / 2;
        text-align: right;
        align-content: center;
        color: var(--color-primary-green-400);

        @media (min-width: $desktop-breakpoint) {
            font-size: rem(46);
            line-height: rem(64);
        }
    }

    @media (min-width: $desktop-breakpoint) {
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        min-height: rem(72);
    }
}

.button {
    font-size: rem(20);
    line-height: rem(26);
    text-transform: uppercase;
    color: var(--color-neutral-green-900);
    background-color: var(--color-primary-green-400);
    border-radius: rem(4);
    padding: rem(10) rem(24);
    cursor: pointer;

    @media (hover: hover) {
        &:hover {
            background-color: var(--color-primary-green-200);
            color: var(--color-neutral-white);
        }
    }
}

.hidden {
    display: none;
}

.attribution {
    font-size: 0.6875rem;
    text-align: center;
}
.attribution a {
    color: hsl(228, 45%, 44%);
}

